# duck-quant

./: .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  Makefile  README.md  duck-quant.json.example  pyproject.toml
data/: README.md
extract/: README.md  gsheets.py
extract/dlthub/: README.md  gsheets_to_duckdb.py
orchestration/: Dockerfile  README.md  docker-compose.yaml  requirements.txt
orchestration/config/: pools.json
orchestration/dags/: elt_google_sheets.py  etl_by_tags.py  google_sheets_to_duckdb.py  resources.py  sensors.py
transformation/: .user.yml  README.md  dbt_project.yml  profiles.yml
transformation/macros/: binance_price.sql
transformation/models/: sources.yml
transformation/models/bronze/: binance_prices.sql  gsheets_crypto_invest_raw.sql  gsheets_expense_raw.sql
transformation/models/gold/: expense_summary.sql  fiat_in_out_monthly.sql  net_amount_by_coin_exchange.sql  net_amount_per_transaction.sql  portfolio_holdings.sql
transformation/models/silver/: binance_prices_current.sql  crypto_invest_current.sql  gsheets_crypto_invest.sql  gsheets_expense.sql
viz/: Dockerfile  README.md  docker-compose.yml  superset_bootstrap.sh  superset_config.py
