[project]
name = "duck_quant"
version = "0.1.0"
description = "Data pipeline with Google Sheets, DuckDB, etc."
requires-python = ">=3.10,<3.12"

# Dependencias
dependencies = ["pandas"]

# Grupos de dependencias
[project.optional-dependencies]
extract = [
    "dlt",
    "google-api-python-client",
    "google-auth-oauthlib",
    "requests",
]
transform = [
    "duckdb",
    "dbt-core",
    "dbt-duckdb",
]
orchestrate = [
    "apache-airflow",
    "astronomer-cosmos",
]
visualization = [
    "apache-superset",
]
dev = [  # Desarrollo y testing
    "pytest",
    "black",
]
